<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text=""
        android:textSize="50sp"
        android:letterSpacing="0.06"
        android:textColor="@color/black"
        android:padding="10dp"
        android:maxLines="2"
        android:gravity="end"
        android:background="#fcf9f9"
        >
    </TextView>
    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text=""
        android:textSize="50sp"
        android:letterSpacing="0.06"
        android:padding="10dp"
        android:gravity="end"
        android:textColor="@color/black"
        android:background="#fcf9f9"
        >
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textC"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/orange"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnLeftB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/leftBraket"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/orange"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnRightB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rightBraket"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/orange"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/orange"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#ffffff"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text7"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text8"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text9"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnmulti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/orange"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#ffffff"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text4"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text5"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text6"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnSub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sub"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/orange"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#ffffff"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text1"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text2"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text3"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/orange"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/change"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                android:background="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/bg_equal"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>